--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,8 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.23.7",
-    "@example/my-component": "workspace:*"
+    "@astrojs/renderer-react": "^0.5.0",
+    "@example/my-component": "workspace:*",
+    "astro": "^0.23.7"
   }
 }
